# PC-monitor

./: .gitignore  Cargo.toml  README.md  使用说明.txt
gpu_monitor_android/: README.md  pubspec.yaml
gpu_monitor_android/android/app/: build.gradle
gpu_monitor_android/android/app/src/main/: AndroidManifest.xml
gpu_monitor_android/android/app/src/main/kotlin/com/example/gpu_monitor_android/: MainActivity.kt
gpu_monitor_android/lib/: main.dart
gpu_monitor_android/lib/models/: gpu_data.dart  monitor_message.dart  system_data.dart
gpu_monitor_android/lib/providers/: monitor_provider.dart
gpu_monitor_android/lib/screens/: connection_screen.dart  error_screen.dart  monitor_screen.dart  waiting_screen.dart
gpu_monitor_android/lib/services/: network_service.dart
gpu_monitor_android/lib/themes/: app_themes.dart
gpu_monitor_android/lib/widgets/: arc_gauge.dart  detail_panel.dart  history_chart.dart
gpu_monitor_android/test/: widget_test.dart
gpu_monitor_android/web/: index.html  manifest.json
src/: shared.rs
src/collector/: gpu.rs  main.rs
src/display/: main.rs  network.rs
src/display/ui/: dashboard.rs  mod.rs  styles.rs
